<resources>
    <string name="facebook_app_id">216166806484513</string>
    <string name="fb_login_protocol_scheme">fb216166806484513</string>

    <string name="app_name">MagicShop</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="empty_actv">Vui lòng nhập từ khóa để tìm kiếm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_registered">Registered</string>
    <string name="title_list">Leaderboard</string>
    <string name="title_detail">Profile</string>
    <string name="cd_home">Home</string>
    <string name="cd_list">List</string>
    <string name="cd_form">Form</string>
    <string name="title_setting">Cài đặt</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="Rate">Rate</string>
    <string name="wrong_otp">Mã otp không chính xác</string>
    <string name="laz_service">\u2713 7 ngày trả hàng cho nhà bán hàng</string>
    <string name="laz_warning">⚠ Đây là sản phẩm được bán bởi Nhà Bán Hàng bên thứ ba và việc xuất hóa đơn VAT(nếu áp dụng) sẽ được thực hiện bởi nhà bán hàng theo quy định của pháp luật.</string>
    <string name="zero">0</string>
    <string name="empty_cart">Your cart is empty.\n Add something to make me happy :))</string>
    <string name="please_check_your_connection_status_and_try_again">Please check your connection status and try again</string>
    <string name="no_internet">No Internet</string>
    <string name="magic">Magic</string>
    <string name="search_here">Tìm kiếm&#8230;</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="xem_th_m"><![CDATA[Xem thêm >]]></string>
    <string name="da_nh_ri_ng_cho_ba_n">Dành riêng cho bạn</string>
    <string name="vi_em">Ví eM</string>
    <string name="th_ng_tin_ta_i_khoa_n">Thông tin tài khoản</string>
    <string name="name">Name</string>
    <string name="ng_nh_p_ng_ky">Đăng nhập / Đăng ký</string>
    <string name="ho_va_t_n">Họ và tên</string>
    <string name="s_i_n_thoa_i">Số điện thoại</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="y_la_nb_c_u_ti_n_ncu_a_ba_n_nv_i_chu_ng_t_i">Đây là\nbước đầu tiên\ncủa bạn\nvới chúng tôi!</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="ng_nh_p_b_ng_ta_i_khoa_n_kha_c">Đăng nhập bằng tài khoản khác?</string>
    <string name="ng_ky_b_ng_ta_i_khoa_n_kha_c">Đăng ký bằng tài khoản khác?</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu?</string>
    <string name="ba_n_ch_a_co_ta_i_khoa_n_nvu_t_sang_pha_i_ng_ky">Bạn chưa có tài khoản?\nVuốt sang phải để đăng ký.</string>
    <string name="ba_n_a_co_ta_i_khoa_n_nvu_t_sang_tra_i_ng_nh_p">Bạn đã có tài khoản?\nVuốt sang trái để đăng nhập.</string>
    <string name="ng_ky">Đăng ký</string>
    <string name="ti_m_ki_m">Tìm kiếm</string>
    <string name="no_image">No Image</string>
    <string name="t_ha_ng">Đặt hàng</string>
    <string name="nh_n_va_o_mu_c_ma_gia_m_gia_cu_i_trang_h_ng_mi_n_phi_v_n_chuy_n_ba_n_nhe">Nhấn vào mục Mã giảm giá ở cuối trang để hưởng miễn phí vận chuyển bạn nhé</string>
    <string name="cho_n_t_t_ca">Chọn tất cả</string>
    <string name="g_i_y_h_m_nay">Gợi ý hôm nay</string>
    <string name="mua_ha_ng">Mua hàng</string>
    <string name="ki_m_tra">Kiểm tra</string>
    <string name="chi_nh_s_a">Chỉnh sửa</string>
    <string name="giao_ha_ng_t_i">Giao hàng tới</string>
    <string name="_0123456789">0123456789</string>
    <string name="your_address">Your address</string>
    <string name="nh_p_ma_gia_m_gia">Nhập mã giảm giá</string>
    <string name="a_p_du_ng">Áp dụng</string>
    <string name="d_da_ng_l_y_ha_ng_v_i_ca_c_i_m_l_y_ha_ng_sau">Dễ dàng lấy hàng với các điểm lấy hàng sau.</string>
    <string name="_1_suggested_collection_point_s_nearby">1 suggested collection point(s) nearby</string>
    <string name="tu_y_cho_n_giao_ha_ng">Tùy chọn giao hàng</string>
    <string name="giao_ha_ng_nhanh">Giao hàng nhanh</string>
    <string name="giao_ha_ng_ti_u_chu_n">Giao hàng tiêu chuẩn</string>
    <string name="tu_y_cho_n_thanh_toa_n">Tùy chọn thanh toán</string>
    <string name="thanh_toa_n_qua_the">Thanh toán qua thẻ</string>
    <string name="th_ng_tin_xu_t_ho_a_n">Thông tin xuất hóa đơn</string>
    <string name="tr_giu_p">Trợ giúp?</string>
    <string name="a_bao_g_m_ca_vat_n_u_co">Đã bao gồm cả VAT(nếu có)</string>
    <string name="thanh_toa_n">Thanh toán</string>
    <string name="t_ng_c_ng">Tổng cộng: </string>
    <string name="s_l_ng">Số lượng: %d</string>
    <string name="tac_gia">Tác giả: %s</string>
    <string name="vi_momo">Ví MoMo</string>
    <string name="thanh_toa_n_khi_nh_n_ha_ng">Thanh toán khi nhận hàng</string>
    <string name="tra_go_p">Trả góp</string>
    <string name="th_m_va_o_gio_ha_ng">Thêm vào giỏ hàng</string>
    <string name="lake_discription">
        Lake Tahoe is a large freshwater lake in the Sierra Nevada of the United States. At a surface
        elevation of 6,225 ft (1,897 m), it straddles the border between California and Nevada, west
        of Carson City. Lake Tahoe is the largest alpine lake in North America. Its depth is
        1,645 ft (501 m), making it the second deepest in the United States after Crater Lake
        (1,945 ft (593 m)). Additionally, Lake Tahoe is the sixth largest lake by volume in the
        United States at 122,160,280 acre·ft (150,682,490 dam3), behind the five Great Lakes.

The lake was formed about 2 million years ago and is a part of the Lake Tahoe Basin with the modern
        lake being shaped during the ice ages. It is known for the clarity of its water and the
        panorama of surrounding mountains on all sides. The area surrounding the lake is also
        referred to as Lake Tahoe, or simply Tahoe. More than 75 percent of the lakes watershed is
        national forest land, comprising the Lake Tahoe Basin Management Unit of the United States
        Forest Service.
    </string>
    <string name="t_n_ng_nh_p">Tên đăng nhập</string>
    <string name="i_a_chi">Địa chỉ</string>
    <string name="error">Error</string>
    <string name="empty_edt">Thông tin này không thể bỏ trống</string>
    <string name="connection_problem">Connection problem</string>
    <string name="error_tap_to_retry">ERROR!! Tap to retry.</string>
    <string name="close">Close</string>
    <string name="mi_n_phi_v_n_chuy_n">Miễn phí vận chuyển</string>
    <string name="gi_i_thi_u_sa_ch">Giới thiệu sách</string>
    <string name="cho_n_xo_a">Vuốt để xóa</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="qu_c_gia">Quốc gia</string>
    <string name="t_kh_ng_c_tra_v_i_ly_do_34_kh_ng_v_a_y_34">\t Không được trả với lý do \"Không vừa ý\"</string>
    <string name="vnd">%.0f đ</string>
    <string name="ma_gia_m_gia">Mã giảm giá</string>
    <string name="kh_ng">Không</string>
    <string name="gio_ha_ng_cu_a_ba_n">Giỏ hàng của bạn</string>
    <string name="th_ng_ba_o">Thông báo</string>
    <string name="xem_t_t_ca">Xem tất cả</string>
    <string name="u2713_c_d_ch_v_b_c_s_ch_plastic_cao_c_p_cho_s_ch_n_y">✓ Có dịch vụ bọc sách plastic cao cấp cho sách này</string>
    <string name="di_ch_vu">Dịch vụ</string>
    <string name="a_nh_gia_38_nh_n_xe_t"><![CDATA[Đánh giá & Nhận xét]]></string>
    <string name="y_u_thi_ch_ncu_a_t_i">Yêu thích\ncủa tôi</string>
    <string name="thay_i_s_i_n_thoa_i">Thay đổi số điện thoại</string>
    <string name="g_i_cho_t_i_ca_c_th_ng_ba_o_va_khuy_n_ma_i_c_bi_t">Gửi cho tôi các thông báo và khuyến mại đặc biệt.</string>
    <string name="tin_nh_n">Báo cáo</string>
    <string name="vietnam_hi_n_ta_i_la_qu_c_gia_cu_a_ba_n">Vietnam hiện tại là quốc gia của bạn.</string>
    <string name="ti_ng_vi_t">Tiếng Việt</string>
    <string name="ng_n_ng_language">Ngôn ngữ - Language</string>
    <string name="kh_ng_c_thi_t_l_p">Không được thiết lập</string>
    <string name="nga_y_sinh">Ngày sinh</string>
    <string name="ta_i_khoa_n_ng_n_ha_ng">Tài khoản ngân hàng</string>
    <string name="reset">Đặt lại mật khẩu</string>
    <string name="by_clicking_reset_you_will_receive_an_email_to_reset_you_password">By clicking RESET,\n you will receive an email to reset you password</string>
    <string name="your_email">Email của bạn</string>
    <string name="type_a_message">Tin nhắn</string>
    <string name="seen">Đã xem</string>
    <string name="delivered">Đang gửi</string>
    <string name="ta_o_ta_i_khoa_n_tra_i_nghi_m_t_t_ca_ti_nh_n_ng">Tạo tài khoản để trải nghiệm tất cả tính năng.</string>
    <string name="ca_nh_n">Cá nhân</string>
    <string name="gio_ha_ng">Giỏ hàng</string>
    <string name="xem_t_t_ca_n_ha_ng"><![CDATA[Xem tất cả đơn hàng >]]></string>
    <string name="danh_mu_c">Danh mục</string>
    <string name="chu_ng_t_i_a_g_i_ma_xa_c_minh_t_i">Chúng tôi đã gửi mã xác minh tới</string>
    <string name="gu_i_ma_xa_c_th_c">Gủi mã xác thực</string>
    <string name="danh_sa_ch_y_u_thi_ch">Danh sách yêu thích</string>
    <string name="book_database">book_database</string>
    <!-- String plurals and their related prefix / suffix strings -->
    <string name="watering_needs_prefix" translation_description="Prefix for the text describing how often a plant should be watered. Used in combination with watering_needs_suffix.">Watering needs</string>
    <string name="thay_i">Thay đổi</string>
    <string name="rate"> %.1f/%s </string>
    <string name="_0_rating">%d rating</string>
    <string name="hotline_1900_6041">HOTLINE: 1900-6041</string>
    <string name="_2020">2020</string>
    <string name="doanh_thu">Doanh thu</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <plurals name="watering_needs_suffix">
        <item quantity="one" translation_description="Suffix for the text describing how often a plant should be watered, singular. Used in combination with watering_needs_prefix: 'Watering needs: every day'.">every day</item>
        <item quantity="other" translation_description="Suffix for the text describing how often a plant should be watered, plural. Used in combination with watering_needs_prefix: 'Watering needs: every 8 days'.">every %d days</item>
    </plurals>

    <plurals name="watering_next">
        <item quantity="one" translation_description="Text indicating when the the plant should next be watered, singular. Used in conjunction with last watered date. 'May 24, 2018 - water tomorrow.'.">water tomorrow.</item>
        <item quantity="other" translation_description="Text indicating when the the plant should next be watered, plural. Used in conjunction with last watered date. 'May 24, 2018 - water in 8 days.'.">water in %d days.</item>
    </plurals>
</resources>
