<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ResetPasswordFragment">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp8"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        app:met_primaryColor="@color/colorMain"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:met_floatingLabel="normal" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/colorPrimaryDark"
        android:text="@string/reset"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/etSendEmail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:gravity="center"
        android:text="@string/by_clicking_reset_you_will_receive_an_email_to_reset_you_password"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

</androidx.constraintlayout.widget.ConstraintLayout>