<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogParent"
    style="@style/df_dialog_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/no_internet_image" />

            <TextView
                style="@style/homeHeading"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/no_internet"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/headerTextSize" />

            <TextView
                android:id="@+id/spinAndWinReward"
                style="@style/learnhubTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/please_check_your_connection_status_and_try_again"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSpinAndWinRedeem"
                style="@style/BorderBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/onboarding_button"
                android:text="@string/close"
                android:textColor="@color/whiteTextColor" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>